# Cubic-Launcher

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PROGRESS.md  NEXT_STEPS_FOR_AI.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  todo.md
.claude/: settings.local.json
b_UvxzxKGObkc-1773695881091/: package.json
java-agent/: .gitignore  build.gradle.kts  settings.gradle.kts
scripts/: verify-launch-matrix.ps1  verify-launch.ps1
src/: App.tsx  index.css  store-actions.ts  store-selectors.ts  store-state.ts  store.ts
src-tauri/: .gitignore  Cargo.toml  launcher_data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/mod-lists/Test/: rules.json
src-tauri/src/: account_manager.rs  adoptium.rs  app_shell.rs  config_attribution.rs  content_packs.rs  database.rs  debug_trace.rs  dependencies.rs  editor_data.rs  editor_data_models.rs  editor_data_tests.rs  instance_configs.rs  instance_mods.rs  java_runtime.rs  launch_command.rs  launch_preview.rs  launch_preview_artifacts.rs  launch_preview_cache.rs  launch_preview_content.rs  launch_preview_dependencies.rs  launch_preview_dependency_resolution.rs  launch_preview_fabric.rs  launch_preview_fabric_versions.rs  launch_preview_logging.rs  launch_preview_models.rs  launch_preview_runtime.rs  launch_preview_tests.rs  launch_preview_vanilla.rs  launch_preview_verification.rs  launcher_paths.rs  lib.rs  loader_metadata.rs  main.rs  microsoft_auth.rs  minecraft_downloader.rs  mod_cache.rs  modlist_assets.rs  modlist_manager.rs  modrinth.rs  offline_account.rs  (+4 more)
(+67 files in other folders)
